@@ -262,6 +262,7 @@ namespace Marvel {
 
 		else if (tformat == mvTextureFormat::RGB_INT)
 		{
+			
 			std::vector<int> mdata = ToIntVect(data);
 
 			std::vector<float> fdata;
@@ -278,6 +279,7 @@ namespace Marvel {
 
 			else
 				mvApp::GetApp()->getTextureStorage().addDelayedTexture(name, fdata, width, height, tformat);
+
 			return GetPyNone();
 		}
 
@@ -480,6 +482,7 @@ namespace Marvel {
 		if (!(*mvApp::GetApp()->getParsers())["set_start_callback"].parse(args, kwargs, __FUNCTION__, &callback))
 			return GetPyNone();
 
+		Py_XINCREF(callback);
 		mvApp::GetApp()->getCallbackRegistry().setOnStartCallback(callback);
 		return GetPyNone();
 	}
@@ -491,6 +494,7 @@ namespace Marvel {
 		if (!(*mvApp::GetApp()->getParsers())["set_exit_callback"].parse(args, kwargs, __FUNCTION__, &callback))
 			return GetPyNone();
 
+		Py_XINCREF(callback);
 		mvApp::GetApp()->getCallbackRegistry().setOnCloseCallback(callback);
 		return GetPyNone();
 	}
@@ -502,6 +506,7 @@ namespace Marvel {
 		if (!(*mvApp::GetApp()->getParsers())["set_accelerator_callback"].parse(args, kwargs, __FUNCTION__, &callback))
 			return GetPyNone();
 
+		Py_XINCREF(callback);
 		mvApp::GetApp()->getCallbackRegistry().setAcceleratorCallback(callback);
 		return GetPyNone();
 	}
